# template

./: .gitignore  CMakeLists.txt  Makefile
include/: gd.h
src/: main.cpp
